cabal-version:      2.4
name:               embeder
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jkeDev
maintainer:         52346246+jkeDev@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lib
    other-modules:
        Commands
        Helper
        Joint
        Lenses
        State

    hs-source-dirs:   src
    ghc-options:      -Wall
    build-depends:
        , base              >=4       && <5
        , composition       ^>=1.0.2.2
        , containers
        , data-default
        , discord-haskell   ^>=1.16.0
        , distributive      ^>=0.6.2.1
        , file-embed
        , lens
        , mtl
        , template-haskell
        , text              ^>=1.2.5.0
        , unliftio

    default-language: Haskell2010

executable embeder
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base
        , embeder
        , text

    hs-source-dirs:   app
    ghc-options:      -Wall
    default-language: Haskell2010
